# stamp-python

./: .gitattributes  BUGNUMS.txt  LICENSE.md  PhysicsSetup.py  README.md  VERSIONS.txt  _.py  __doc__.py  __fetch__.py  __init__.py  _conf.py  _evlog.py  _regex.py  _rxyz.py  _shcut.py  _sprite.py  _term.py  api.py  cert.py  extension.json  extensionlong.json  info.json  install.bat  install.ps1  install.sh  llm.py  main.py  physics.jfif  physics.py  pyproject.toml  resource.json  resourcelong.json  sdd8rules.md  server.py  validation.py
docs/all/: index.md
docs/api/: ai.md  core.md  error-codes.md  html.md  import-syntax.md  java.md  ollama.md  physics.md  scratch.md  server.md  timestamps.md  utilities.md
docs/examples/: ai-features.md  basic-usage.md
docs/guides/: quickstart.md
info/changelogs/ai/4.5/: CHANGELOG.md
info/changelogs/ai/4.6/: CHANGELOG.md
info/changelogs/ai/4.7/: CHANGELOG.md
lib/ai/oaiftrs/: oaiftrs.py
lib/ai/oaiftrs/aud/: adai.py
lib/ai/oaiftrs/cdi/: coai.py
lib/ai/oaiftrs/daz/: daai.py
lib/ai/oaiftrs/dpl/: dlai.py
lib/ai/oaiftrs/esc/: esai.py
lib/ai/oaiftrs/fct/: fcai.py
lib/ai/oaiftrs/img/: imai.py
lib/ai/oaiftrs/kga/: kgai.py
lib/ai/oaiftrs/prd/: prai.py
lib/ai/oaiftrs/ptr/: ptai.py
lib/ai/oaiftrs/qzr/: quzr.py
lib/ai/oaiftrs/rec/: rcai.py
lib/ai/oaiftrs/sec/: scai.py
lib/ai/oaiftrs/vis/: viai.py
stamp.egg-info/: PKG-INFO  SOURCES.txt
tests/ai/oaiftrs/: oaiftest.py
tests/ai/oaiftrs/aud/: adaitest.py
tests/ai/oaiftrs/cdi/: coaitest.py
tests/ai/oaiftrs/daz/: daaitest.py
(+10 files in other folders)
