[build-system]
requires = ["setuptools>=71.0.0", "rich>=14.2.0", "requests>=2.32.3", "psutil>=7.1.1", "tiktoken>=0.12.0", "beautifulsoup4>=4.13.3"]
build-backend = "setuptools.build_meta"
[project]
name = "stamp"
description = ""# keep description empty 
requires-python = ">=3.10"
license = { text = "MIT" }
version = "4.11"
[tool.setuptools]
packages = ["stamp"]
[tool.setuptools.package-dir]
stamp = "." 